tests/ui/issues/issue-28344.edition2021.stderr
error[E0782]: expected a type, found a trait
  --> $DIR/issue-28344.rs:7:17
   |
LL |     let x: u8 = BitXor::bitor(0 as u8, 0 as u8);
   |                 ^^^^^^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
LL |     let x: u8 = <dyn BitXor>::bitor(0 as u8, 0 as u8);
   |                 ++++       +
help: you may have misspelled this associated item, causing `BitXor` to be interpreted as a type rather than a trait
   |
LL |     let x: u8 = BitXor::bitxor(0 as u8, 0 as u8);
   |                            +

error[E0782]: expected a type, found a trait
  --> $DIR/issue-28344.rs:13:13
   |
LL |     let g = BitXor::bitor;
   |             ^^^^^^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
LL |     let g = <dyn BitXor>::bitor;
   |             ++++       +
help: you may have misspelled this associated item, causing `BitXor` to be interpreted as a type rather than a trait
   |
LL |     let g = BitXor::bitxor;
   |                        +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0782`.
